--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,11 @@ asyncio-throttle==1.0.2
 great-expectations==0.17.23
 pandera==0.17.2
 
+# Feature Engineering
+nltk==3.8.1
+vaderSentiment==3.3.2
+textstat==0.7.3
+
 # Configuration management
 hydra-core==1.3.2
 dynaconf==3.2.4
