--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ asyncio-throttle==1.0.2
 # Data validation and processing
 great-expectations==0.17.23
 pandera==0.17.2
+pandas==2.1.4
 
 # Feature Engineering
 nltk==3.8.1
