Align HPA custom metric name with Prometheus gauge

--- a/k8s/scalability-config.yaml
+++ b/k8s/scalability-config.yaml
@@ -80,7 +80,7 @@ spec:
     - type: Pods
       pods:
         metric:
-          name: active_requests
+          name: sentiment_active_requests
         target:
           type: AverageValue
           averageValue: "50"
