Add chaos engineering targets and enhance test suite
- Updated Makefile to include new chaos engineering commands for installation, testing, cleanup, and status checks.
- Added YAML manifests for pod kill and network partition chaos experiments, with detailed descriptions.
- Enhanced the chaos test suite to include prerequisite checks for Kubernetes connectivity, deployment existence, and Chaos Mesh installation.
- Introduced new chaos experiments for pod killing and network partitioning, with expected behaviors documented.
- Improved error handling and logging in the chaos experiment scripts for better user feedback.

--- a/chaos/chaos-mesh/01-pod-kill.yaml
+++ b/chaos/chaos-mesh/01-pod-kill.yaml
@@ -1,3 +1,7 @@
+# Pod Kill Chaos Experiment
+# This manifest kills a random pod matching the label selector
+# Note: Namespace can be overridden when applying: kubectl apply -f <file> -n <namespace>
+# Label selector matches Helm deployment: app.kubernetes.io/name=mlops-sentiment
 apiVersion: chaos-mesh.org/v1alpha1
 kind: PodChaos
 metadata:
