--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,15 +31,12 @@ repos:
       - id: isort
         args: [--settings-path=pyproject.toml]
 
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.0.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.15
     hooks:
-      - id: flake8
-        args: [--config=.flake8]
-        additional_dependencies:
-          - flake8-bugbear
-          - flake8-comprehensions
-          - flake8-simplify
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+      - id: ruff-format
 
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.6
