--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,4 +74,94 @@ python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
+disallow_incomplete_defs = false
+check_untyped_defs = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+strict_equality = true
 ignore_missing_imports = true
+show_error_codes = true
+show_column_numbers = true
+
+[[tool.mypy.overrides]]
+module = [
+  "mlflow.*",
+  "prometheus_client.*",
+  "redis.*",
+  "kafka.*",
+  "onnxruntime.*",
+  "torch.*",
+  "transformers.*",
+]
+ignore_missing_imports = true
+
+[tool.ruff]
+line-length = 100
+target-version = "py311"
+
+[tool.ruff.lint]
+select = [
+  "E",   # pycodestyle errors
+  "W",   # pycodestyle warnings
+  "F",   # pyflakes
+  "I",   # isort (handled separately but kept for ruff import sorting)
+  "B",   # flake8-bugbear
+  "C4",  # flake8-comprehensions
+  "UP",  # pyupgrade
+  "ARG", # flake8-unused-arguments
+  "SIM", # flake8-simplify
+  "PTH", # flake8-use-pathlib
+  "ERA", # eradicate (commented-out code)
+  "PD",  # pandas-vet
+  "PL",  # Pylint
+  "TRY", # tryceratops
+  "RUF", # Ruff-specific rules
+]
+ignore = [
+  "E501",    # line too long (handled by formatter)
+  "B008",    # do not perform function calls in argument defaults
+  "PLR0913", # too many arguments
+  "PLR2004", # magic value used in comparison
+  "TRY003",  # avoid specifying long messages outside exception class
+]
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]               # unused imports
+"tests/*" = ["ARG", "PLR2004", "S101"] # test-specific ignores
+"scripts/*" = ["T201"]                 # print statements allowed in scripts
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
+
+[tool.ruff.lint.isort]
+known-first-party = ["app"]
+force-single-line = false
+force-sort-within-sections = true
+
+[tool.radon]
+cc_min = "B"           # Minimum complexity grade (A-F)
+no_assert = false
+show_complexity = true
+min = "B"              # Minimum grade to show
+
+[tool.coverage.run]
+source = ["app"]
+omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*", "*/migrations/*"]
+
+[tool.coverage.report]
+exclude_lines = [
+  "pragma: no cover",
+  "def __repr__",
+  "raise AssertionError",
+  "raise NotImplementedError",
+  "if __name__ == .__main__.:",
+  "if TYPE_CHECKING:",
+  "class .*\\bProtocol\\):",
+  "@(abc\\.)?abstractmethod",
+]
+precision = 2
+show_missing = true
+skip_covered = false
+fail_under = 80.0
