refactor: optimize resource configurations for various environments
This commit updates the resource configurations across multiple YAML files to enhance performance and stability for different deployment environments. Key changes include:

- Adjusted CPU and memory requests/limits for development, staging, production, and GPU configurations to better align with usage patterns and prevent OOM kills.
- Added comments to clarify the rationale behind resource settings, focusing on average usage, burst handling, and stability.

These enhancements aim to improve resource management and ensure efficient operation across various deployment scenarios.

--- a/helm/mlops-sentiment/values-gpu-multi.yaml
+++ b/helm/mlops-sentiment/values-gpu-multi.yaml
@@ -25,14 +25,18 @@ gpu:
       memoryAware: true
 
   # Resources for multi-GPU pod
+  # Optimized for multi-GPU workloads:
+  # - CPU requests: Average usage for bin-packing
+  # - CPU limits: Higher for model loading/preprocessing across GPUs
+  # - Memory requests = limits to avoid OOM kills
   resources:
     requests:
-      cpu: 4000m
-      memory: 16Gi
+      cpu: 4000m      # Average usage (~50% of limit) for bin-packing
+      memory: 32Gi    # Equal to limits for stable scheduling
       # nvidia.com/gpu will be set to gpusPerPod automatically
     limits:
-      cpu: 8000m
-      memory: 32Gi
+      cpu: 8000m      # Higher for model loading/preprocessing bursts
+      memory: 32Gi    # Equal to requests to avoid OOM kills
       # nvidia.com/gpu will be set to gpusPerPod automatically
 
   # Multi-GPU environment variables
