--- a/helm/mlops-sentiment/values-gpu-single.yaml
+++ b/helm/mlops-sentiment/values-gpu-single.yaml
@@ -15,14 +15,18 @@ gpu:
   type: nvidia-tesla-t4
 
   # GPU resources
+  # Optimized for single T4 GPU workloads:
+  # - CPU requests: Average usage for bin-packing
+  # - CPU limits: Higher for model loading/preprocessing
+  # - Memory requests = limits to avoid OOM kills
   resources:
     requests:
-      cpu: 2000m
-      memory: 8Gi
+      cpu: 2000m      # Average usage (~50% of limit) for bin-packing
+      memory: 16Gi    # Equal to limits for stable scheduling
       nvidia.com/gpu: 1
     limits:
-      cpu: 4000m
-      memory: 16Gi
+      cpu: 4000m      # Higher for model loading/preprocessing bursts
+      memory: 16Gi    # Equal to requests to avoid OOM kills
       nvidia.com/gpu: 1
 
   # Optimized environment for single GPU
