--- a/helm/mlops-sentiment/values-dev.yaml
+++ b/helm/mlops-sentiment/values-dev.yaml
@@ -6,12 +6,16 @@ deployment:
   replicaCount: 1
 
   resources:
+    # Development-optimized resources (minimal for local testing):
+    # - CPU requests: Average usage for bin-packing
+    # - CPU limits: P95 + buffer for bursts
+    # - Memory: Equal requests/limits to prevent OOM kills
     limits:
-      cpu: 500m
-      memory: 512Mi
+      cpu: 500m       # P95 usage + buffer for bursts
+      memory: 512Mi   # Equal to requests to avoid OOM kills
     requests:
-      cpu: 250m
-      memory: 256Mi
+      cpu: 200m       # Average usage (~40% of limit) for bin-packing
+      memory: 512Mi   # Equal to limits for stable scheduling
 
   env:
     MLOPS_DEBUG: "true"
