refactor: Organize configuration and scripts
- Group config files into functional subdirectories
- Move profile validation scripts to `scripts/`
- Update `docker-compose.yml` path references
- Introduce multi-target Dockerfile build structure
- Add usage details to Dockerfile headers

--- a/Dockerfile.distroless
+++ b/Dockerfile.distroless
@@ -1,3 +1,11 @@
+# Production (Secure) Dockerfile
+# Minimal attack surface using Google's distroless base image.
+#
+# Usage:
+#   docker build -f Dockerfile.distroless -t sentiment:secure .
+#
+# See docs/docker/DOCKERFILE_GUIDE.md for details.
+
 # Distroless Multi-stage Dockerfile for Enhanced Security
 # Uses Google's distroless Python image to minimize attack surface
 #
