chore: Align script references after refactor
- Update script paths in CI workflow (vault rotation)
- Update script references in documentation
- Add __init__.py files to new script subdirectories
- Finalize package structure following directory move

--- a/.github/workflows/vault-secret-rotation.yml
+++ b/.github/workflows/vault-secret-rotation.yml
@@ -87,7 +87,7 @@ jobs:
                       DRY_RUN_FLAG="--dry-run"
                     fi
 
-                    python scripts/rotate-secrets.py \
+                    python scripts/ops/rotate-secrets.py \
                       --vault-addr "$VAULT_ADDR" \
                       --vault-token "$VAULT_TOKEN" \
                       --environment "$ENVIRONMENT" \
