chore(scripts): Finalize script package structure
- Add __init__.py to all script subdirectories
- Fix sys.path in test scripts after directory move
- Update scripts/README.md with usage examples
- Add placeholder for local quality gate pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,3 +53,13 @@ repos:
         args: [--ignore-missing-imports, --show-error-codes]
         additional_dependencies:
           - types-requests
+
+  # Local CI/CD hooks (Optional - runs quality_gate.py)
+  # - repo: local
+  #   hooks:
+  #     - id: quality-gate
+  #       name: Quality Gate
+  #       entry: python scripts/ci/quality_gate.py
+  #       language: system
+  #       types: [python]
+  #       pass_filenames: false
