docs(scripts): Document usage notes
- Add detailed usage notes on exit codes
- Clarify how scripts should be executed
- Add comments explaining quality gate hook setup

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,6 +55,10 @@ repos:
           - types-requests
 
   # Local CI/CD hooks (Optional - runs quality_gate.py)
+  # NOTE: To enable this hook, you must have run pytest with coverage
+  # and have a .coverage file in the root.
+  # Usage: make quality-gate
+  #
   # - repo: local
   #   hooks:
   #     - id: quality-gate
