--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,8 +57,8 @@ repos:
   # Local CI/CD hooks (Optional - runs quality_gate.py)
   # NOTE: To enable this hook:
   # 1) Uncomment lines 63-68 below
-  # 2) Run `make quality-gate` once to generate coverage
-  # 3) Run `pre-commit install`
+  # 2) Run `pre-commit install` to update hooks
+  # 3) Run `make quality-gate` to generate required .coverage file
   #
   # - repo: local
   #   hooks:
